--- a/index.html
+++ b/index.html
@@ -5,51 +5,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
     <link rel="stylesheet" href="./assets/styles/style.css">
-    <script src="./assets/scripts/script.js" defer></script>
+    
     <title>Frontend Mentor | Intro section with dropdown navigation</title>
   </head>
   <body>
+    <div class="backdrop"></div>
     <header>
       <img src="./images/logo.svg" alt="snap" class="logo">
       <ul class="main-list">
+        <img src="./images/icon-close-menu.svg" alt="" class="close-menu__btn">
         <li>
-          <a href="#">
+          <a href="#" class="moreOptions">
             Features
             <span class="arrow">
               <img src="./images/icon-arrow-down.svg" alt="">
             </span>
           </a>
-          <ul class="secondary-list">
+          <ul class="secondary-list secondary-list__one">
+  
             <li>
-              <a href="#">
+              <a href="#" class="todo">
                 Todo List
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="#" class="calendar">
                 Calendar
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="#" class="reminders">
                 Reminders
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="#" class="planning">
                 Planning
               </a>
             </li>
           </ul>
         </li>
         <li>
-          <a href="#">
+          <a href="#" class="moreOptions">
             Company
             <span class="arrow">
               <img src="./images/icon-arrow-down.svg" alt="">
             </span>
           </a>
-          <ul class="secondary-list">
+          <ul class="secondary-list secondary-list__two">
             <li>
               <a href="#">
                 History
@@ -86,11 +89,11 @@
           Register
         </button>
       </div>
-      <img src="./images/icon-menu.svg" alt="">
+      <img src="./images/icon-menu.svg" alt="" class="open-menu__btn">
     </header>
     <main>
       <div class="image-container">
-        <img src="./images/image-hero-mobile.png" alt="">
+        <img src="./images/image-hero-mobile.png" alt="" class="image-hero">
       </div>
       <div class="text-container">
         <h1>
@@ -125,5 +128,6 @@
         Coded by <a href="https://www.instagram.com/_dani.zew_/" target="_blank" rel="noopener">Dani</a>.
       </div>
     </footer>
+    <script src="./assets/scripts/script.js"></script>
   </body>
 </html>
