--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           Get your team in sync, no matter your location. Streamline processes, 
           create team rituals, and watch productivity soar.
         </p>
-        <button clas="text-container__btn">
+        <button class="text-container__btn">
           Learn more
         </button>
         <ul class="client-images__container">
